@@ -2,6 +2,7 @@ intended v0.1.20
 + ui/Component API cleanup
 + implement ui/Component display, hide and show
 + better xhr error checking and xhr object cleanup
++ implement invoke
 
 v0.1.19
 + Add xhr option not to encode values
